# CFDPython

./: .gitignore  main.py  pyproject.toml  requirements.txt
.claude/: settings.json
lessons/: 01_Step_1.ipynb  03_CFL_Condition.ipynb  04_Step_3.ipynb  05_Step_4.ipynb  07_Step_5.ipynb  08_Step_6.ipynb  09_Step_7.ipynb  10_Step_8.ipynb  11_Defining_Function_in_Python.ipynb  12_Step_9.ipynb  14_Step_11.ipynb
src/CFL_Condition/: main.py
src/step_1/: main.py  step_1.ipynb
src/step_10/: main.py  step_10.ipynb
src/step_11/: main.py  step_11.ipynb
src/step_12/: main.py  step_12.ipynb
src/step_2/: main.py  step_2.ipynb
src/step_3/: main.py  step_3.ipynb
src/step_4/: main.py  step_4.ipynb
src/step_5/: main.py  step_5.ipynb
src/step_6/: main.py  step_6.ipynb
src/step_7/: main.py  step_7.ipynb
src/step_8/: main.py  step_8.ipynb
src/step_9/: main.py  step_9.ipynb
