[project]
name = "cfdpython"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ipywidgets>=7.6.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.3.0",
    "numpy>=1.21.0",
    "scipy>=1.5.0",
    "sympy>=1.8.0",
]




 
[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true









